--- a/app/src/main/res/layout/activity_create_order.xml
+++ b/app/src/main/res/layout/activity_create_order.xml
@@ -1,8 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".CreateOrderActivity">
 
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/view_pager_order"
+        android:layout_width="match_parent"
+        android:layout_height="480dp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tab_layout_order"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_gravity="bottom"
+        app:tabBackground="@drawable/selected_tab"
+        app:tabPaddingEnd="@dimen/cardview_compat_inset_shadow"
+        app:tabGravity="fill"
+        app:tabMaxWidth="0dp"
+        app:tabTextColor="#949494"
+        app:tabMode="fixed"
+        app:tabSelectedTextColor="#000000" />
+
+</LinearLayout>
