--- a/app/src/main/res/layout/fragment_order_details.xml
+++ b/app/src/main/res/layout/fragment_order_details.xml
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/back_btn"
+        android:id="@+id/back_btn_detail"
         android:layout_width="135dp"
         android:layout_height="72dp"
         android:layout_marginBottom="430dp"
@@ -31,7 +31,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/confirm_order_btn"
+        android:id="@+id/confirm_btn_detail"
         android:layout_width="135dp"
         android:layout_height="72dp"
         android:layout_marginBottom="430dp"
@@ -107,7 +107,9 @@
     </LinearLayout>
 
     <androidx.appcompat.widget.SearchView
+        android:id="@+id/search_view"
         android:layout_width="900dp"
+        app:iconifiedByDefault="false"
         android:layout_height="40dp"
         android:layout_marginBottom="235dp"
         android:background="@drawable/custom_input_editext"
@@ -120,111 +122,81 @@
         android:id="@+id/rcv_detail_order"
         android:layout_width="900dp"
         android:layout_height="275dp"
-        android:layout_marginTop="193dp"
-        android:background="@color/light_gray"
+        android:layout_marginTop="183dp"
+        android:background="#f5f5f5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginBottom="320dp"
-        android:text="Mã đơn hàng: "
-        android:textColor="#424241"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/order_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="668dp"
-        android:layout_marginBottom="320dp"
-        android:text="TextView"
-        android:textColor="#424241"
+    <LinearLayout
+        android:layout_width="900dp"
+        android:layout_height="30dp"
+        android:layout_marginBottom="323dp"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="320dp"
-        android:text="Tổng SKUs: "
-        android:textColor="#424241"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Mã đơn hàng: "
+            android:textColor="#424241" />
 
-    <TextView
-        android:id="@+id/order_sku"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginBottom="320dp"
-        android:text="2"
-        android:textColor="#424241"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/order_detail_id"
+            android:layout_marginLeft="3dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textColor="#424241" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="380dp"
-        android:layout_marginBottom="320dp"
-        android:text="Tổng số lượng: "
-        android:textColor="#424241"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:layout_marginLeft="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tổng SKUs: "
+            android:textColor="#424241"
+            />
 
-    <TextView
-        android:id="@+id/order_amount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="490dp"
-        android:layout_marginBottom="320dp"
-        android:text="21"
-        android:textColor="#424241"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/order_detail_sku"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="3dp"
+            android:text="2"
+            android:textColor="#424241" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="750dp"
-        android:layout_marginBottom="320dp"
-        android:text="Tổng tiền: "
-        android:textColor="#424241"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="50dp"
+            android:text="Tổng số lượng: "
+            android:textColor="#424241" />
 
-    <TextView
-        android:id="@+id/sum_price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="860dp"
-        android:layout_marginBottom="320dp"
-        android:text="31000"
-        android:textColor="#424241"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/order_detail_amount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="21"
+            android:layout_marginLeft="3dp"
+            android:textColor="#424241" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tổng tiền: "
+            android:layout_marginLeft="50dp"
+            android:textColor="#424241" />
+
+        <TextView
+            android:id="@+id/order_detail_sum_price"
+            android:layout_marginLeft="3dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="31000"
+            android:textColor="#424241" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
