--- a/app/src/main/res/layout/fragment_order_confirm.xml
+++ b/app/src/main/res/layout/fragment_order_confirm.xml
@@ -202,6 +202,7 @@
         android:layout_width="600dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="210dp"
+        android:inputType="numberSigned"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
