--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="dark_gray">#FF737575</color>
+    <color name="super_dark_gray">#FF5f5f5f</color>
     <color name="light_gray">#FFd7d9d9</color>
 </resources>
